<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2015 Priyesh Patel
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
-->
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">>

    <string name="app_name">Fontster</string>
    <string name="ok">OK</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="retry">Retry</string>
    <string name="exit">Exit</string>
    <string name="ad_space">Ad Space</string>

    <string name="alphabet_upper">ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="alphabet_lower">abcdefghijklmnopqrstuvwxyz</string>

    <string name="banner_ad_unit_id">ca-app-pub-8798644144122718/6263923171</string>
    <string name="nexus_5_device_id">AAADAC4EC821D354F2BEF1C833EE7EFB</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="drawer_item_font_list">Fonts</string>
    <string name="drawer_item_backup_restore"><![CDATA[Backup & Restore]]></string>
    <string name="drawer_item_settings">Settings</string>

    <string name="font_menu_toggle_case">Toggle case</string>
    <string name="font_menu_try">Try</string>

    <string name="main_menu_search">Search</string>

    <string name="reboot_dialog_title">Installation complete</string>
    <string name="reboot_dialog_message">Please reboot your device for the changes to take effect.</string>
    <string name="reboot_dialog_button_text">Reboot</string>
    <string name="reboot_failed">Unable to reboot device</string>

    <string name="backup_restore_no_backups">You do not currently have a backup</string>
    <string name="backup_restore_option_restore">Restore</string>
    <string name="backup_restore_option_delete">Delete</string>
    <string name="backup_restore_restore_failed">Restore failed. Please try again</string>
    <string name="backup_restore_delete_failed">Failed to delete backup</string>
    <string name="backup_restore_backup_failed">Backup failed. Please try again.</string>

    <string name="backup_dialog_title">Name your backup</string>
    <string name="backup_dialog_message">This will overwrite your current backup</string>
    <string name="backup_dialog_hint">Name</string>
    <string name="backup_dialog_button_backup">Backup</string>
    <string name="backup_dialog_invalid_name">Please enter a name for the backup</string>

    <string name="donate_dialog_title">Donation amount</string>
    <string name="donate_dialog_donation_small">Small ($1)</string>
    <string name="donate_dialog_donation_medium">Medium ($3)</string>
    <string name="donate_dialog_donation_large">Large ($10)</string>

    <string name="try_font_dialog_hint">Try it out!</string>
    <string name="font_pack_picker_dialog_hint">File path</string>

    <string name="font_activity_download_failed">Fontster was unable to download this font</string>
    <string name="font_activity_tab_regular">Regular</string>
    <string name="font_activity_tab_bold">Bold</string>
    <string name="font_activity_tab_italic">Italic</string>
    <string name="font_activity_install_failed">Install failed</string>
    <string name="font_activity_install_progress">Installing fonts…</string>
    <string name="font_activity_confirm_install">Are you sure you want to install this font?</string>

    <string name="prompt_backup_message">Looks like you haven\'t made a backup yet. Would you like to create one now?</string>
    <string name="prompt_backup_dont_show_again">Don\'t show this again</string>

    <string name="font_list_download_progress">Downloading previews…</string>
    <string name="font_list_download_failed">Fontster was unable to download the fonts</string>

    <string name="font_pack_picker_dialog_title">Font Package</string>
    <string name="font_pack_picker_dialog_invalid_path">Invalid font package folder</string>

    <string name="settings_title">Settings</string>
    <string name="settings_developer_title">Developer Settings</string>
    <string name="settings_iab_setup_error">A problem was encountered while setting up In-App Billing</string>
    <string name="settings_confirm_custom_font_install_title">Are you sure?</string>
    <string name="settings_confirm_custom_font_install_message">Installing an unverified font pack can potentially brick your phone. Only proceed if you are confident in what you are doing.</string>
    <string name="settings_custom_font_install_progress">Installing…</string>
    <string name="settings_custom_font_install_failed">Custom font installation failed</string>
    <string name="settings_donation_failed">Failed to make donation</string>
    <string name="settings_donation_success">Donation complete, thanks :)</string>
    <string name="settings_clear_cache_progress">Clearing cache…</string>
    <string name="settings_clear_cache_success">Cache has been cleared</string>
    <string name="settings_clear_cache_failed">Unable to clear cache</string>
    <string name="settings_link_github">https://github.com/ItsPriyesh/FontInstaller</string>
    <string name="settings_restart_dialog_message">Restart the app for the change to take effect.</string>
    <string name="settings_restart_dialog_button">Restart</string>

    <string name="pref_install_custom_font_summary">Select and load a local font pack</string>
    <string name="pref_install_custom_font_title">Install custom font</string>
    <string name="pref_category_general">General</string>
    <string name="pref_enable_truefont_summary">Show font names in their corresponding typeface</string>
    <string name="pref_enable_truefont_title">TrueFont Display</string>
    <string name="pref_clear_cache_summary">Wipe stored fonts</string>
    <string name="pref_clear_cache_title">Clear cache</string>
    <string name="pref_category_about">About</string>
    <string name="pref_view_source_summary">View this app\'s source code</string>
    <string name="pref_view_source_title">Source</string>
    <string name="pref_licenses_summary">Details for libraries used in this app</string>
    <string name="pref_licenses_title">Open source licenses</string>
    <string name="pref_donate_summary">This will remove advertisements</string>
    <string name="pref_donate_title">Donate</string>
    <string name="pref_app_version_title">App version</string>

    <string name="splash_no_root_title">Root Access Unavailable</string>
    <string name="splash_no_root_message">In order to use Fontster your device must be rooted. If your device is rooted, please ensure that you have granted superuser access to Fontster.</string>
    <string name="splash_no_storage_access_title">Storage Access Unavailable</string>
    <string name="splash_no_storage_access_message">Fontster requires read and write access to your storage in order to download and handle fonts.</string>

    <string name="title_activity_font_style_debug">Font Style Debug</string>

</resources>
