<!--
  ~ Copyright 2015 Priyesh Patel
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.chromium.fontinstaller.ui.install.PreviewFragment"
    android:background="@color/white_100_opacity"
    android:padding="16dp">

    <com.chromium.fontinstaller.ui.common.AutoScaleTextView
        android:id="@+id/preview_text"
        android:textSize="500sp"
        android:textColor="@color/black_100_opacity"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</FrameLayout>
